--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,28 +1,46 @@
+<!DOCTYPE html>
 <html>
-   <head>
-        <title>Program #1</title>
-        <link rel="shortcut icon" type="icon" href="img/cs-addu-100.png"/>
-    </head>
-    <body>
-        <h2>
-            <img src="img/cs-addu-100.png" alt="CS-logo">
-            Web  Development & Technologies 1
-        </h2>
-        <table>
-            <thead>
-                <tr>
-                    <td> <a href="index.html">Home</a> | </td>
-                    <td> <a href="articles.html">Articles</a> | </td>
-                    <td> <a href="about.html">About</a></td>
-                </tr>
-            </thead>
-        </table>
-        <h3>Web Activities</h3>
-        <ol>
-            <li>Program #2</li>
-            <li>Program #3</li>
-            <li>Program #4</li>
-            <li>Program #5</li>
-        <ol>
-    </body>
+
+<head>
+    <title>Assignment Solution for module 2</title>
+    <link rel="stylesheet" href="css/stylesheets.css">
+</head>
+
+<body>
+    <h1>Our Menu</h1>
+    <div id="row">
+
+        <div class="col-lg-4 col-md-6">
+            <div class="section" id="section1">
+                <div id="chicken" class="title">Chicken</div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <div class="section" id="section2">
+                <div id="beef" class="title">Beef</div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <div class="section" id="section3">
+                <div id="sushi" class="title">Sushi</div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat..
+                </p>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
