--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Module 4 Solution Starter</title>
-    <script src="js/speakHello.js"></script>
-    <script src="js/speakGoodbye.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="SpeakHello.js"></script>
+    <script src="SpeakGoodbye.js"></script>
+    <script src="scripts.js"></script>
 </head>
 
 <body>
